[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mispr"
authors = [
    {name = "Rasha Atwi", email = "rasha.atwi@stonybrook.edu"},
    {name = "Matthew Bliss", email = "matthew.bliss@stonybrook.edu"}
]
maintainers = [
    {name = "Rasha Atwi", email = "rasha.atwi@stonybrook.edu"},
    {name = "Matthew Bliss", email = "matthew.bliss@stonybrook.edu"}
]
dynamic = ["version"]
description = "mispr contains FireWorks workflows for Materials Science"
readme = "README.md"
license = { text = "MIT" }
keywords = ["dft", "md", "lammps", "gaussian", "high-throughput", "workflow", "materials science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy >= 1.21.1",
    "pymongo>=3.3.0,<=3.12.0",
    "matplotlib >= 3.3.1",
    "networkx >= 2.5",
    "FireWorks >= 2.0.3",
    "scipy >= 1.6.0",
    "pandas >= 1.1.2",
    "pubchempy",
    "parmed",
    "mdproptools>=0.0.6",
    "dnspython",
    "custodian==2024.10.16",
    "ruamel.yaml>=0.15.35,<=0.17.40", # should be removed in the future, but is needed since FireWorks has not updated their function calls to match newer versions of ruamel.yaml
]

[project.optional-dependencies]
dev = ["black>=23.3.0", "isort>=5.10.0"]
chem = ["rdkit>=2023.9.1"]
utils = ["bibtexparser>=1.4.0"]

[tool.setuptools.package-data]
"mispr.gaussian.data" = ["*.bib"]
"mispr.lammps.data" = ["*.json"]
"mispr.lammps.templates" = ["*"]


[project.urls]
repository = "https://github.com/molmd/mispr"
documentation = "https://molmd.github.io/mispr/"
changelog = "https://github.com/molmd/mispr/blob/master/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "mispr.__version__"}

[tool.setuptools.packages.find]
namespaces = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88
order_by_type = true
length_sort = true
lines_between_types = 1
group_by_package = true
force_alphabetical_sort_within_sections = true
combine_straight_imports = false
balanced_wrapping = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "OPENBABEL", "PYMATGEN", "FIREWORKS", "CUSTODIAN", "MDPROPTOOLS", "MISPR", "FIRSTPARTY", "LOCALFOLDER"]
forced_separate = ["openbabel", "pymatgen", "fireworks", "custodian", "mdproptools", "mispr"]
known_openbabel = ["openbabel"]
known_pymatgen = ["pymatgen"]
known_fireworks = ["fireworks"]
known_custodian = ["custodian"]
known_mdproptools = ["mdproptools"]
known_mispr = ["mispr"]

[tool.black]
line-length = 88
